# Euclid_2D

./: .gitattributes  .gitignore  README.md  pytest.ini  readme.MD  requirements.txt  util.py
linear_problem_generator/: Cargo.toml
linear_problem_generator/src/: README.md  consts.rs  lib.rs  main.rs
linear_problem_generator/src/deduplication/: main.rs
linear_problem_generator/src/embeddings/: constructions_simple.rs  embedded_diagram.rs  embedding.rs  geo_float.rs  mod.rs  predicates_simple.rs  tau.rs
linear_problem_generator/src/embeddings/embedded_objects/: embedded_circle.rs  embedded_line.rs  embedded_object.rs  embedded_point.rs  mod.rs
linear_problem_generator/src/geometry/: base_diagram.rs  construction.rs  construction_type.rs  diagram.rs  geo_type.rs  mod.rs  predicate.rs  predicate_type.rs  problem.rs  symmetry.rs
linear_problem_generator/src/groups/: group_action.rs  mod.rs  symmetric_group.rs  trivial_group.rs
linear_problem_generator/src/groups/dihedral_group/: element.rs  group.rs  mod.rs
linear_problem_generator/src/naming/: geogebra_naming.rs  mod.rs  naming_scheme.rs
linear_problem_generator/src/problem_generation/: mod.rs
linear_problem_generator/src/problem_generation/diagram_extension/: diagram_extender.rs  heuristical_extender.rs  mod.rs  repeat_extender.rs  single_random_object_extender.rs  symmetrical_extender.rs
rules/rust_code/: Cargo.toml  compile_script.ps1  compile_script.sh  rust_dag.py  rust_linear.py  rust_match.py  rust_sparse_linear.py
rules/rust_code/src/: lib.rs  main.rs
rules/rust_code/src/geo/: mod.rs
(+1441 files in other folders)
